fixed the spacing of subheading when window is resized

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  max-width: 100%;
+
 }
 
 html {
@@ -125,7 +127,7 @@ h1{
     font-weight: normal;
     float: right;
     padding-right: 10%;
-    padding-left: 150%;
+    padding-left: 70%;
 }
 
 h2{
@@ -134,6 +136,7 @@ h2{
   font-size: calc(20px + 1.5vw);
   color: black;
   padding-top: 100px;
+  padding-right: 25px;
   width: 100%;
 }
 
